# personal-summary

./: EveryDay Summary.txt  README.md
2018-10-12/: 2018-10-12(The number of solutions on eclipse exceeds 65536).md  2018-10-12(The similarities and differences of MQTT and Socket).md
2018-10-16/: 2018-10-16(Design pattern --6).md
2018-10-17/: 2018-10-17(Design pattern --7).md
2018-10-23/: 2018-10-23(Android App Performance optimization).md
2018-10-8/: 2018-10-8(Design pattern --4).md
2018-10-9/: 2018-10-9(Design pattern --5).md
2018-7-31/: 2018-7-31(Module change into Jar file).md
2018-8-1/: 2018-8-1(Android device and sdcard paths details).md  2018-8-1(Blog scan summary).md
2018-8-16/: 2018-8-16(Activity life cycle).md
2018-8-29/: 2018-8-29(Activity Launch Mode).md
2018-8-3/: 2018-8-3(Eclipse various question about YSDK).md
2018-8-30/: 2018-8-30(Android IPC Mechanism).md
2018-8-31/: 2018-8-31(View Event System).md
2018-8-6/: 2018-8-6(Blog scan summary).md
2018-8-7/: 2018-8-7(How to implement the native method).md
2018-8-8/: 2018-8-8(Native method in-depth study).md
2018-9-19/: 2018-9-19(Sdk Version Detailed).md
2018-9-27/: 2018-9-27(The problems of encapsulating okHttp).md
2018-9-28/: 2018-9-28(Design pattern --1).md
2018-9-29/: 2018-9-29(Design pattern --2).md
2018-9-30/: 2018-9-30(Design pattern --3).md
2018-9-4/: 2018-9-4(First known working principle of view).md  2018-9-4.md
2019-1-10/: 2019-1-10(Overview of the binder).md
2019-5-15/IncrementUpdate_BSDiff_Demo/app/src/main/cpp/: CMakeLists.txt  bspatch.c  native-lib.cpp
(+472 files in other folders)
